lấy dữ liệu lịch chiếu phim và thông tin về ghế

--- a/app/src/main/res/layout/fragment_choose_seat.xml
+++ b/app/src/main/res/layout/fragment_choose_seat.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.minhtam.sellticketoopv2.ChooseSeatFragment">
+    tools:context="com.example.minhtam.sellticketoopv2.chooseseat.ChooseSeatFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout android:layout_height="match_parent"
