--- a/app/src/main/res/layout/fragment_film.xml
+++ b/app/src/main/res/layout/fragment_film.xml
@@ -34,11 +34,11 @@
                     android:text="Thoi gian"/>
             </LinearLayout>
         </LinearLayout>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Dat ve"
-            android:id="@+id/btnFilmElement"/>
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="5"
+            android:id="@+id/lvFilmElement"></ListView>
     </LinearLayout>
 
 </FrameLayout>
