--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -57,7 +57,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Dang nhap"
+                android:text="Dang ky"
                 android:id="@+id/btnSubmitSign"/>
         </LinearLayout>
 
