--- a/app/src/main/res/layout/film_element_schedules.xml
+++ b/app/src/main/res/layout/film_element_schedules.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-
-</FrameLayout>
+<LinearLayout android:layout_height="70dp"
+    android:layout_width="match_parent"
+    android:background="#ff4c52"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#7736f3fd"
+        android:id="@+id/txtFilmElementSchedules"/>
+</LinearLayout>
