--- a/app/src/main/res/layout/fragment_film.xml
+++ b/app/src/main/res/layout/fragment_film.xml
@@ -2,43 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.minhtam.sellticketoopv2.FilmFragment">
+    tools:context="com.example.minhtam.sellticketoopv2.film.FilmFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="10">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="5"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:id="@+id/imgFilmElement"/>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Ten"
-                    android:id="@+id/txtNameFilmElement"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Thoi gian"/>
-            </LinearLayout>
-        </LinearLayout>
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="5"
-            android:id="@+id/lvFilmElement"></ListView>
-    </LinearLayout>
+        android:id="@+id/rcFilmElement"></android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
