--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -8,15 +8,16 @@
             android:title="Trang chủ" />
         <item
             android:id="@+id/nav_place"
+            android:icon="@drawable/ic_room_black"
             android:title="Rạp chiếu phim" />
         <item
             android:id="@+id/nav_login"
             android:icon="@drawable/ic_menu_login"
             android:title="Đăng nhập" />
-        <item
-            android:id="@+id/nav_signin"
-            android:icon="@drawable/ic_menu_login"
-            android:title="Đăng ký" />
+        <!--<item-->
+            <!--android:id="@+id/nav_signin"-->
+            <!--android:icon="@drawable/ic_menu_login"-->
+            <!--android:title="Đăng ký" />-->
         <item
             android:id="@+id/nav_chooseSeat"
             android:icon="@drawable/ic_menu_share"
