--- a/app/src/main/res/layout/fragment_sale_analyze.xml
+++ b/app/src/main/res/layout/fragment_sale_analyze.xml
@@ -6,8 +6,11 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Thống kê lượng vé bán theo ngày" />
+    <com.github.mikephil.charting.charts.LineChart
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:id="@+id/lineChartSaleAnalyze"></com.github.mikephil.charting.charts.LineChart>
 </FrameLayout>
