--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -22,6 +22,10 @@
             android:id="@+id/nav_chooseSeat"
             android:icon="@drawable/ic_menu_share"
             android:title="Chọn ghế" />
+        <item
+            android:id="@+id/nav_analyze"
+            android:icon="@drawable/ic_menu_share"
+            android:title="Thống kê" />
 
     </group>
     <group>
