--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,8 +9,9 @@
     tools:showIn="@layout/app_bar_main">
 
     <FrameLayout
+        android:id="@+id/frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/frame"></FrameLayout>
+        android:background="#fbfbfb"></FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
