--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -40,15 +40,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Loại tài khoản"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
                 android:layout_alignParentLeft="true"
-                android:textSize="16sp"
-                />
+                android:layout_alignParentStart="true"
+                android:layout_alignTop="@+id/spinnerRoles"
+                android:text="Loại tài khoản"
+                android:textSize="16sp" />
             <Spinner
                 android:id="@+id/spinnerRoles"
                 android:layout_width="wrap_content"
