--- a/app/src/main/res/layout/item_film_.xml
+++ b/app/src/main/res/layout/item_film_.xml
@@ -2,10 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="110dp"
     android:layout_height="150dp">
+
     <ImageView
+        android:id="@+id/imgFilm"
         android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:id="@+id/imgFilm"/>
+        android:layout_height="100dp" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
