--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -22,6 +22,10 @@
             android:id="@+id/nav_analyze"
             android:icon="@drawable/ic_menu_share"
             android:title="Thống kê" />
+        <item
+            android:id="@+id/nav_update_info"
+            android:icon="@drawable/ic_room_black"
+            android:title="Cập nhật thông tin" />
 
     </group>
     <group>
