--- a/app/src/main/res/layout/fragment_create_schedule.xml
+++ b/app/src/main/res/layout/fragment_create_schedule.xml
@@ -5,9 +5,43 @@
     tools:context="com.example.minhtam.sellticketoopv2.seller.createschedule.CreateScheduleFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
+        <EditText
+            android:id="@+id/edtTimeBegin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:hint="Thời gian bắt đầu" />
+        <EditText
+            android:id="@+id/edtTimeEnd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:hint="Thời gian kết thúc" />
+        <EditText
+            android:id="@+id/edtPriceVIP"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:hint="Giá của ghế Vip" />
+        <EditText
+            android:id="@+id/edtPriceNORMAL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:hint="Gia của ghế thường" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tạo Lich chiếu"
+            android:id="@+id/btnSubmitCreateSchedule"/>
+    </LinearLayout>
 
 </FrameLayout>
