--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -24,7 +24,7 @@
         android:layout_gravity="center_horizontal"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:scaleType="centerInside"
-        android:src="@drawable/user" />
+        android:src="@drawable/user" android:contentDescription="TODO"/>
 
     <TextView
         android:id="@+id/txtUserName"
