--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -15,9 +15,9 @@
             android:icon="@drawable/ic_menu_login"
             android:title="Đăng nhập" />
         <item
-            android:id="@+id/nav_chooseSeat"
+            android:id="@+id/nav_create_film"
             android:icon="@drawable/ic_menu_share"
-            android:title="Chọn ghế" />
+            android:title="Tạo phim m" />
         <item
             android:id="@+id/nav_analyze"
             android:icon="@drawable/ic_menu_share"
