change button shape,edittext shape, place fragment,

--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -21,5 +21,6 @@
         android:id="@+id/btnBook"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Book" />
+        android:text="Book"
+        android:background="@drawable/button_book"/>
 </LinearLayout>
