--- a/app/src/main/res/layout/film_element_schedules.xml
+++ b/app/src/main/res/layout/film_element_schedules.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:layout_height="70dp"
-    android:layout_width="match_parent"
-    android:background="#ff4c52"
+    android:layout_width="300dp"
+    android:layout_margin="20dp"
+    android:background="@drawable/button_book"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <TextView
+        android:layout_margin="10dp"
+        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#7736f3fd"
+        android:layout_height="match_parent"
         android:id="@+id/txtFilmElementSchedules"/>
 </LinearLayout>
