--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -23,7 +23,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
-            android:hint="Email" />
+            android:hint="Email"
+            android:background="@drawable/edittext"/>
 
         <EditText
             android:id="@+id/edtPasswordLogIn"
@@ -32,7 +33,8 @@
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:hint="Mật khẩu"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:background="@drawable/edittext"/>
 
         <Button
             android:id="@+id/btnSubmit"
@@ -41,7 +43,8 @@
             android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
             android:padding="12dp"
-            android:text="Đăng nhập" />
+            android:text="Đăng nhập"
+            android:background="@drawable/button"/>
 
         <TextView
             android:id="@+id/txtCreateAccount"
