--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -17,6 +17,7 @@
             android:layout_marginBottom="8dp"
             android:hint="Email"
             android:id="@+id/edtEmailSign"
+            android:background="@drawable/edittext"
             />
         <EditText
             android:layout_width="match_parent"
@@ -25,6 +26,7 @@
             android:layout_marginBottom="8dp"
             android:hint="Tên hiển thị"
             android:id="@+id/edtNameSign"
+            android:background="@drawable/edittext"
             />
         <EditText
             android:layout_width="match_parent"
@@ -34,6 +36,7 @@
             android:inputType="textPassword"
             android:hint="Mật khẩu"
             android:id="@+id/edtPasswordSign"
+            android:background="@drawable/edittext"
             />
 
         <RelativeLayout
@@ -66,6 +69,7 @@
             android:padding="12dp"
             android:text="Đăng ký"
             android:id="@+id/btnSubmitSign"
+            android:background="@drawable/button"
             />
 
         <TextView android:id="@+id/txtLogIn"
