--- a/app/src/main/res/layout/item_place_.xml
+++ b/app/src/main/res/layout/item_place_.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-android:layout_height="150dp">
+    android:background="@drawable/button"
+    android:orientation="vertical" android:layout_width="300dp"
+android:layout_height="75dp"
+    android:gravity="center"
+    android:layout_margin="10dp">
 <TextView
-    android:layout_width="wrap_content"
+    android:gravity="center"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/txtNamePlace"/>
 
-    <ImageView
-        android:id="@+id/imgPlace"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher" />
 </LinearLayout>
