--- a/app/src/main/res/drawable/button_book.xml
+++ b/app/src/main/res/drawable/button_book.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#e8ff84"/>
+    <solid android:color="#ff0026"/>
     <corners android:radius="2000dp"/>
 </shape>
