--- a/app/src/main/res/layout/fragment_history_sell.xml
+++ b/app/src/main/res/layout/fragment_history_sell.xml
@@ -2,12 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.minhtam.sellticketoopv2.seller.HistorySellFragment">
+    tools:context="com.example.minhtam.sellticketoopv2.seller.historysell.HistorySellFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/rcHistorySell"></android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
