--- a/app/src/main/res/layout/item_place_.xml
+++ b/app/src/main/res/layout/item_place_.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/button"
     android:orientation="vertical" android:layout_width="300dp"
-android:layout_height="75dp"
+    android:layout_height="75dp"
     android:gravity="center"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    >
 <TextView
     android:gravity="center"
     android:layout_width="match_parent"
