--- a/app/src/main/res/layout/item_user_history.xml
+++ b/app/src/main/res/layout/item_user_history.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="250dp">
+    android:layout_height="300dp"
+    android:layout_marginBottom="2dp"
+    android:layout_marginTop="3dp">
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
