--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/layoutUserInfo"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#3656b6"
+    android:background="@color/colorPrimaryDark"
     android:gravity="top"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -16,15 +16,16 @@
 
     <ImageView
         android:id="@+id/imgProfile"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_gravity="center_horizontal"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:scaleType="centerInside"
-        android:src="@drawable/user" />
+        android:src="@drawable/user"
+        android:background="@drawable/image_boder"/>
 
     <TextView
         android:id="@+id/txtUserName"
