--- a/app/src/main/res/layout/fragment_update_password.xml
+++ b/app/src/main/res/layout/fragment_update_password.xml
@@ -20,7 +20,8 @@
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:inputType="textPassword"
-            android:hint="Mật khẩu mới" />
+            android:hint="Mật khẩu mới"
+            android:background="@drawable/edittext"/>
 
         <EditText
             android:id="@+id/edtReUpdatePass"
@@ -29,7 +30,8 @@
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:hint="Nhập lại mật khẩu mới"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:background="@drawable/edittext"/>
 
         <Button
             android:id="@+id/btnSubmitUpdatePass"
@@ -38,7 +40,8 @@
             android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
             android:padding="12dp"
-            android:text="Xác nhận" />
+            android:text="Xác nhận"
+            android:background="@drawable/button"/>
     </LinearLayout>
 
 </FrameLayout>
