--- a/app/src/main/res/drawable/edittext.xml
+++ b/app/src/main/res/drawable/edittext.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="#d9d9d9" android:width="3dp"
+    <stroke android:color="#1328ec" android:width="3dp"
         />
     <padding android:left="15dp"
         android:top="10dp"
