--- a/app/src/main/res/layout/dialog_ticket.xml
+++ b/app/src/main/res/layout/dialog_ticket.xml
@@ -6,7 +6,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ma QR code:"/>
+        android:text="Mã QR code:"/>
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
@@ -16,6 +16,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Close"
+        android:text="Đóng"
         android:background="@drawable/button_book"/>
 </LinearLayout>
