--- a/app/src/main/res/layout/fragment_choose_film_sell.xml
+++ b/app/src/main/res/layout/fragment_choose_film_sell.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="casual"
-            android:text="Chọn Film"
+            android:text="Chọn Phim"
             android:textAlignment="center"
             android:textSize="30sp"
             android:background="#a2edc4"/>
