--- a/app/src/main/res/layout/fragment_sex_analyze.xml
+++ b/app/src/main/res/layout/fragment_sex_analyze.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Thống kê giới tính khách hang mua vé" />
+        android:text="Thống kê giới tính khách hàng mua vé" />
     <com.github.mikephil.charting.charts.PieChart
         android:layout_width="match_parent"
         android:layout_height="match_parent"
