--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -34,15 +34,15 @@
         <item
             android:id="@+id/nav_seller_create_schedule"
             android:icon="@drawable/add"
-            android:title="Tao phong xem phim" />
+            android:title="Tạo phòng xem phim" />
         <item
             android:id="@+id/nav_seller_create_film"
             android:icon="@drawable/film"
-            android:title="Tao phim" />
+            android:title="Tạo phim" />
         <item
             android:id="@+id/nav_history_sell"
             android:icon="@drawable/history_sell"
-            android:title="Lich su ban ve" />
+            android:title="Lịch sử bán vé" />
 
     </group>
     <group>
